<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">InfosierrAPP</string>
    <string name="logo_desc">Logotipo Infosierra</string>
    <string name="B_buscar"> ¡Encontrar! </string>
    <string name="B_cancelar">Parar</string>
    <string name="T_titulo">El buscador de la Sierra de Aracena, Picos de Aroche y sus alrededores&#8230;</string>
    <string name="T_subtitulo">¿Qué quieres buscar?</string>
    <string name="T_sugesH">Algunas sugerencias&#8230;</string>    
    <string name="ET_buscar">ej: Restaurantes</string>
    <string name="SV_hint">ej: Librerías</string>
    <string name="SV_label">@string/app_name</string>
    <string name="B_weather">¿Qué tiempo hace?</string>
    <string name="B_map">Ver en el mapa</string>
    <string name="T_weather">El tiempo en la sierra&#8230;</string>
    <string name="master_title">Resultados</string>
    <string name="detail_title">Detalle</string>
    <string name="detalle_hint_nombre">Nombre</string>
    <string name="detalle_hint_dir">Dirección</string>
    <string name="detalle_hint_email">Email</string>
    <string name="detalle_hint_tlf">Teléfonos</string>
    <string name="detalle_hint_web">Web</string>
    <string name="detalle_hint_desc">Descripción</string>
    <string name="detalle_img_desc">Logo</string>
    
    <string name="presentador_map">Mapa</string>
    <string name="menu_exit">Salir</string>
    <string name="menu_opciones">Opciones</string>
    <string name="menu_web">Ir a www.infosierra.es</string>
    <string name="menu_borrar_busquedas">Limpiar sugerencias</string>
    <string name="menu_delete">Del</string>
    <string name="menu_new">New</string>
    <string name="menu_back">Back</string>
    <string name="menu_save">Guardar</string>
    <string name="menu_llamar">Llamar</string>
    <string name="menu_compartir">Compartir</string>
    <string name="send_to">Compartir</string>
    <string name="menu_email">Email</string>

    <!-- Shown above search results when we receive a search request. -->
    <plurals name="search_results">
        <item quantity="one">%1$d resultado para \"%2$s\": </item>
        <item quantity="other">%1$d resultados para \"%2$s\": </item>
    </plurals>

    <!-- Search failure message. -->
    <string name="no_results">No se encontraron resultados para \"%s\"</string>

    <!-- General instructions in the main activity. -->
    <string name="search_instructions">Usa el campo de busqueda para buscar lo que desees</string>

    <!-- The hint text that appears in the search box. -->
    <string name="search_hint">Busca en Infosierra!</string>

</resources>