<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_llamar"
        android:icon="@drawable/ic_menu_llamar"
        android:showAsAction="ifRoom"
        android:title="@string/menu_llamar"/>
    <item
        android:id="@+id/menu_email"
        android:icon="@drawable/ic_menu_mail"
        android:showAsAction="ifRoom"
        android:title="@string/menu_email"/>
    <item
        android:id="@+id/menu_compartir"
        android:icon="@drawable/ic_menu_share"
        android:showAsAction="ifRoom"        
        android:title="@string/menu_compartir"/>
    <item
        android:id="@+id/menu_opciones"
        android:icon="@drawable/ic_menu_opciones"
        android:showAsAction="collapseActionView"
        android:title="@string/menu_opciones"/>
    <item
        android:id="@+id/menu_exit"
        android:icon="@drawable/ic_menu_exit"
        android:showAsAction="collapseActionView"
        android:title="@string/menu_exit"/>
</menu>