<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <item
            android:id="@+id/menu_web"
            android:icon="@drawable/ic_menu_web"            
            android:showAsAction="collapseActionView"            
            android:title="@string/menu_web"/>

    <item
            android:id="@+id/menu_opciones"
            android:icon="@drawable/ic_menu_opciones"            
            android:showAsAction="collapseActionView"
            android:title="@string/menu_opciones"/>
  
    <item
            android:id="@+id/menu_borrar_busquedas"
            android:icon="@drawable/ic_menu_borrar"            
            android:showAsAction="collapseActionView"
            android:visible="false"
            android:title="@string/menu_borrar_busquedas"/>
    
    <item
            android:id="@+id/menu_exit"
            android:icon="@drawable/ic_menu_exit"            
            android:showAsAction="collapseActionView"
            android:title="@string/menu_exit"/>
    
</menu>